# gsViewer

./: CMakeLists.txt  LICENSE  README.md  app.cpp
include/: 3dgs.hpp  appState.hpp  camera.hpp  component.hpp  dataset.hpp  gui.hpp  saveImage.hpp  shader.hpp
shader/: ml_sharp.fs  ml_sharp.vs  splat.fs  splat.vs
source/: glad.c  gui.cpp  shader.cpp
